Fix coding style

--- a/templates/grades_sorter_form.mustache
+++ b/templates/grades_sorter_form.mustache
@@ -21,8 +21,8 @@
 
     Example context (json):
     {
-        "sesskey": "XXXXX",
-	}
+        "sesskey": "XXXXX"
+    }
 }}
 <div class="grade_sorterform">
     <form class="form-inline" method="POST">
